objects/Projet__c.object
<CustomObject>
    <fields>
        <fullName>Date_de_debut__c</fullName>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin__c</fullName>
        <label>Date de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Projet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>